--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RFShell",
+  "name": "rfshell",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,7 +14,7 @@
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1"
+    "react-scripts": "^3.4.0"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
